add robust method with Dantzig-Wolfe

--- a/2025_Projet_KEP.ipynb
+++ b/2025_Projet_KEP.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -134,35 +134,13 @@
      "text": [
       "\n",
       "-------------------------------\n",
-      "Résolution du modèle sans contrainte de longueur de cycle\n",
-      "\n",
-      "Statut de la résolution : OPTIMAL\n",
-      "Durée de la résolution : 0.132287\n",
-      "Nombre de transferts réalisés : 4.0\n",
-      "Liste des transferts réalisés :\n",
-      "1 -> 6 ; 3 -> 8 ; 6 -> 1 ; 8 -> 3 ; \n",
-      "-------------------------------\n",
-      "\n",
-      "\n",
-      "-------------------------------\n",
-      "Résolution du modèle avec cycles de taille 2\n",
-      "\n",
-      "Statut de la résolution : OPTIMAL\n",
-      "Durée de la résolution : 0.000379083\n",
-      "Nombre de transferts réalisés : 4.0\n",
-      "Liste des transferts réalisés :\n",
-      "1 <-> 6 ; 3 <-> 8 ; \n",
-      "-------------------------------\n",
-      "\n",
-      "\n",
-      "-------------------------------\n",
       "Résolution du modèle avec cycle de taille au plus 4\n",
       "\n",
       "Statut de la résolution : OPTIMAL\n",
-      "Durée de la résolution : 0.023070209\n",
-      "Nombre de transferts réalisés : 4\n",
+      "Durée de la résolution : 0.152726583\n",
+      "Nombre de transferts réalisés : 23\n",
       "Liste des transferts réalisés :\n",
-      "1 -> 6 ; 3 -> 8 ; 6 -> 1 ; 8 -> 3 ; \n",
+      "1 -> 32 ; 2 -> 29 ; 3 -> 19 ; 4 -> 7 ; 5 -> 18 ; 6 -> 14 ; 7 -> 4 ; 8 -> 23 ; 9 -> 16 ; 11 -> 2 ; 14 -> 6 ; 15 -> 30 ; 16 -> 15 ; 17 -> 11 ; 18 -> 5 ; 19 -> 3 ; 21 -> 22 ; 22 -> 21 ; 23 -> 27 ; 27 -> 8 ; 29 -> 17 ; 30 -> 9 ; 32 -> 1 ; \n",
       "-------------------------------\n",
       "\n"
      ]
@@ -173,8 +151,9 @@
     "include(\"formulations_compactes.jl\")\n",
     "\n",
     "# tests de bon fonctionnement sur le petit graphe importé plus haut\n",
-    "solve_cycle_infini(G, edge_weight);\n",
-    "solve_cycle_2(G, edge_weight);\n",
+    "# solve_cycle_infini(G, edge_weight);\n",
+    "# solve_cycle_2(G, edge_weight);\n",
+    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_031.wmd\");\n",
     "solve_cycle_K(G, edge_weight, 4);"
    ]
   },
@@ -197,105 +176,394 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "brut_force (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p = 841\n",
+      "length(C_K_i[10]) = 841\n",
+      "\n",
+      "-------------------------------\n",
+      "Brute force resolution of the KEP problem with K = 4 \n",
+      "\n",
+      "Resolution status : OPTIMAL\n",
+      "computation time : 0.011040958\n",
+      "Number of performed exchanges  : 4.0\n",
+      "List of performed exchanges :\n",
+      "\n",
+      "*** Cycle chosen: \n",
+      "\t 1 -> 2 -> 4 -> 17\n",
+      "-------------------------------\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "# TO DO : explore Deapth Search / Wide search ? \n",
-    "\n",
-    "function enumerate_cycles(G::SimpleDiGraph, K::Int64)\n",
-    "\n",
-    "    cycles = Vector{Vector{Int64}}()\n",
-    "    c = Vector{Int64}(undef, K) # current cycle so we don't reallocate memory each time we add a vertex\n",
-    "\n",
-    "    @inbounds for v in vertices(G)\n",
-    "        c[1] = v\n",
-    "        search_cycles!(G,K,cycles,c,1)\n",
-    "    end\n",
-    "    return cycles\n",
-    "end\n",
-    "\n",
-    "# Recursive function\n",
-    "function search_cycles!(G::SimpleDiGraph, K::Int64, cycles::Vector{Vector{Int64}}, c::Vector{Int64}, i::Int64)\n",
-    "    # neighborhood exploration\n",
-    "    for ngb in outneighbors(G,c[i])\n",
-    "        if ngb == c[1]\n",
-    "            push!(cycles,c[1:i])  # There is a cycle\n",
-    "        elseif i < K && ngb > c[1] && (K<4 || !detect_subcycles(ngb,c,i))   # No sub-cycles for K < 4\n",
-    "            c[i+1] = ngb\n",
-    "            search_cycles!(G,K,cycles,c,i+1)\n",
-    "        end\n",
-    "    end\n",
-    "end\n",
-    "\n",
-    "function detect_subcycles(v::Int64, c::Vector{Int64}, i::Int64)::Bool\n",
-    "    for j in 2:i\n",
-    "        if c[j] == v \n",
-    "            return true\n",
-    "        end\n",
-    "    end\n",
-    "    return false\n",
-    "end\n",
-    "\n",
-    "function brut_force(G::SimpleDiGraph, K::Int64)\n",
-    "    C_K = enumerate_cycles(G,K)\n",
-    "    for c in C_K\n",
-    "        print(\"\\n*** Cycle : \\n\\t $(c[1])\")\n",
-    "        for v in 2:length(c) \n",
-    "            print(\" -> $v\")\n",
-    "        end\n",
-    "    end\n",
-    "\n",
-    "    p = length(C_K)\n",
-    "    model = Model(HiGHS.Optimizer);\n",
-    "    L = length.(C_K) # cycles lengths\n",
-    "    I = vertices(G) # vertex indices\n",
-    "\n",
-    "    \n",
-    "    C_K_i = Vector{Vector{Int64}}(undef, length(I))\n",
-    "    fill!(C_K_i,Vector{Int64}())\n",
-    "\n",
-    "    @variable(model, α[i in range(p)], Bin);\n",
-    "    @objective(model, Min, sum(α[c]*l[c] for c in C_K));\n",
-    "    @constraint(model, [i in I], sum(α[c] for c in C_K));\n",
-    "\n",
-    "\n",
-    "end"
+    "include(\"brute_force_approach.jl\")\n",
+    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_031.wmd\");\n",
+    "C_K = enumerate_cycles(G,K)\n",
+    "@show C_K\n",
+    "K = 4\n",
+    "brut_force(G,K)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C_K_i[1] = Int64[]\n"
+      "\n",
+      "*** Cycle : \n",
+      "\t 1 -> 2\n",
+      "*** Cycle : \n",
+      "\t 1 -> 2 -> 19\n",
+      "*** Cycle : \n",
+      "\t 1 -> 2 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 2 -> 32\n",
+      "*** Cycle : \n",
+      "\t 1 -> 4 -> 17\n",
+      "*** Cycle : \n",
+      "\t 1 -> 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 18 -> 5\n",
+      "*** Cycle : \n",
+      "\t 1 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 27\n",
+      "*** Cycle : \n",
+      "\t 1 -> 27 -> 3\n",
+      "*** Cycle : \n",
+      "\t 1 -> 27 -> 5\n",
+      "*** Cycle : \n",
+      "\t 1 -> 27 -> 19\n",
+      "*** Cycle : \n",
+      "\t 1 -> 29 -> 17\n",
+      "*** Cycle : \n",
+      "\t 1 -> 32\n",
+      "*** Cycle : \n",
+      "\t 1 -> 32 -> 3\n",
+      "*** Cycle : \n",
+      "\t 1 -> 32 -> 19\n",
+      "*** Cycle : \n",
+      "\t 1 -> 32 -> 27\n",
+      "*** Cycle : \n",
+      "\t 2 -> 4 -> 17\n",
+      "*** Cycle : \n",
+      "\t 2 -> 18 -> 5\n",
+      "*** Cycle : \n",
+      "\t 2 -> 19 -> 3\n",
+      "*** Cycle : \n",
+      "\t 2 -> 19 -> 5\n",
+      "*** Cycle : \n",
+      "\t 2 -> 27 -> 3\n",
+      "*** Cycle : \n",
+      "\t 2 -> 27 -> 5\n",
+      "*** Cycle : \n",
+      "\t 2 -> 29 -> 17\n",
+      "*** Cycle : \n",
+      "\t 2 -> 32 -> 3\n",
+      "*** Cycle : \n",
+      "\t 3 -> 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 3 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 3 -> 17 -> 19\n",
+      "*** Cycle : \n",
+      "\t 3 -> 17 -> 27\n",
+      "*** Cycle : \n",
+      "\t 3 -> 19\n",
+      "*** Cycle : \n",
+      "\t 3 -> 19 -> 32\n",
+      "*** Cycle : \n",
+      "\t 3 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 3 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 3 -> 32\n",
+      "*** Cycle : \n",
+      "\t 3 -> 32 -> 19\n",
+      "*** Cycle : \n",
+      "\t 3 -> 32 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 7\n",
+      "*** Cycle : \n",
+      "\t 4 -> 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 9 -> 7\n",
+      "*** Cycle : \n",
+      "\t 4 -> 9 -> 14\n",
+      "*** Cycle : \n",
+      "\t 4 -> 9 -> 16\n",
+      "*** Cycle : \n",
+      "\t 4 -> 9 -> 22\n",
+      "*** Cycle : \n",
+      "\t 4 -> 9 -> 23\n",
+      "*** Cycle : \n",
+      "\t 4 -> 16\n",
+      "*** Cycle : \n",
+      "\t 4 -> 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 7\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 11\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 19\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 22\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 23\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 24\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 26\n",
+      "*** Cycle : \n",
+      "\t 4 -> 17 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 21 -> 7\n",
+      "*** Cycle : \n",
+      "\t 4 -> 21 -> 14\n",
+      "*** Cycle : \n",
+      "\t 4 -> 21 -> 16\n",
+      "*** Cycle : \n",
+      "\t 4 -> 21 -> 22\n",
+      "*** Cycle : \n",
+      "\t 4 -> 22\n",
+      "*** Cycle : \n",
+      "\t 4 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 23\n",
+      "*** Cycle : \n",
+      "\t 4 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 4 -> 30 -> 7\n",
+      "*** Cycle : \n",
+      "\t 4 -> 30 -> 13\n",
+      "*** Cycle : \n",
+      "\t 4 -> 30 -> 14\n",
+      "*** Cycle : \n",
+      "\t 4 -> 30 -> 16\n",
+      "*** Cycle : \n",
+      "\t 4 -> 30 -> 22\n",
+      "*** Cycle : \n",
+      "\t 5 -> 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 13 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 17 -> 19\n",
+      "*** Cycle : \n",
+      "\t 5 -> 17 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 18\n",
+      "*** Cycle : \n",
+      "\t 5 -> 19\n",
+      "*** Cycle : \n",
+      "\t 5 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 27\n",
+      "*** Cycle : \n",
+      "\t 5 -> 27 -> 18\n",
+      "*** Cycle : \n",
+      "\t 5 -> 27 -> 19\n",
+      "*** Cycle : \n",
+      "\t 6 -> 7\n",
+      "*** Cycle : \n",
+      "\t 6 -> 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 6 -> 9 -> 7\n",
+      "*** Cycle : \n",
+      "\t 6 -> 9 -> 14\n",
+      "*** Cycle : \n",
+      "\t 6 -> 9 -> 16\n",
+      "*** Cycle : \n",
+      "\t 6 -> 9 -> 22\n",
+      "*** Cycle : \n",
+      "\t 6 -> 9 -> 23\n",
+      "*** Cycle : \n",
+      "\t 6 -> 14\n",
+      "*** Cycle : \n",
+      "\t 6 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 6 -> 21 -> 7\n",
+      "*** Cycle : \n",
+      "\t 6 -> 21 -> 14\n",
+      "*** Cycle : \n",
+      "\t 6 -> 21 -> 16\n",
+      "*** Cycle : \n",
+      "\t 6 -> 21 -> 22\n",
+      "*** Cycle : \n",
+      "\t 6 -> 22\n",
+      "*** Cycle : \n",
+      "\t 6 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 6 -> 23\n",
+      "*** Cycle : \n",
+      "\t 6 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 6 -> 30 -> 7\n",
+      "*** Cycle : \n",
+      "\t 6 -> 30 -> 13\n",
+      "*** Cycle : \n",
+      "\t 6 -> 30 -> 14\n",
+      "*** Cycle : \n",
+      "\t 6 -> 30 -> 16\n",
+      "*** Cycle : \n",
+      "\t 6 -> 30 -> 22\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 8\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 9\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 10\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 12\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 18\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 30\n",
+      "*** Cycle : \n",
+      "\t 7 -> 27 -> 31\n",
+      "*** Cycle : \n",
+      "\t 8 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 8 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 9 -> 14 -> 15\n",
+      "*** Cycle : \n",
+      "\t 9 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 9 -> 16 -> 15\n",
+      "*** Cycle : \n",
+      "\t 9 -> 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 9 -> 21\n",
+      "*** Cycle : \n",
+      "\t 9 -> 21 -> 30\n",
+      "*** Cycle : \n",
+      "\t 9 -> 22 -> 15\n",
+      "*** Cycle : \n",
+      "\t 9 -> 22 -> 21\n",
+      "*** Cycle : \n",
+      "\t 9 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 9 -> 23 -> 15\n",
+      "*** Cycle : \n",
+      "\t 9 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 10 -> 13 -> 27\n",
+      "*** Cycle : \n",
+      "\t 10 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 10 -> 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 10 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 10 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 12 -> 13 -> 27\n",
+      "*** Cycle : \n",
+      "\t 12 -> 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 12 -> 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 12 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 13 -> 15\n",
+      "*** Cycle : \n",
+      "\t 13 -> 15 -> 30\n",
+      "*** Cycle : \n",
+      "\t 13 -> 27 -> 19\n",
+      "*** Cycle : \n",
+      "\t 13 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 13 -> 27 -> 30\n",
+      "*** Cycle : \n",
+      "\t 14 -> 15\n",
+      "*** Cycle : \n",
+      "\t 14 -> 15 -> 30\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27 -> 18\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27 -> 19\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27 -> 30\n",
+      "*** Cycle : \n",
+      "\t 14 -> 27 -> 31\n",
+      "*** Cycle : \n",
+      "\t 15 -> 22\n",
+      "*** Cycle : \n",
+      "\t 15 -> 30 -> 16\n",
+      "*** Cycle : \n",
+      "\t 15 -> 30 -> 22\n",
+      "*** Cycle : \n",
+      "\t 16 -> 27\n",
+      "*** Cycle : \n",
+      "\t 16 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 16 -> 27 -> 30\n",
+      "*** Cycle : \n",
+      "\t 17 -> 19 -> 29\n",
+      "*** Cycle : \n",
+      "\t 17 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 19 -> 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 19 -> 23 -> 27\n",
+      "*** Cycle : \n",
+      "\t 19 -> 32\n",
+      "*** Cycle : \n",
+      "\t 19 -> 32 -> 27\n",
+      "*** Cycle : \n",
+      "\t 21 -> 22\n",
+      "*** Cycle : \n",
+      "\t 21 -> 30\n",
+      "*** Cycle : \n",
+      "\t 21 -> 30 -> 22\n",
+      "*** Cycle : \n",
+      "\t 22 -> 27\n",
+      "*** Cycle : \n",
+      "\t 22 -> 27 -> 29\n",
+      "*** Cycle : \n",
+      "\t 22 -> 27 -> 30\n",
+      "*** Cycle : \n",
+      "\t 22 -> 27 -> 31\n",
+      "*** Cycle : \n",
+      "\t 23 -> 27"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Int64[]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "I = 4\n",
-    "\n",
-    "\n",
-    "@show(C_K_i[1])"
+    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_031.wmd\");\n",
+    "K = 3\n",
+    "C_K = enumerate_cycles(G,K)\n",
+    "C_K_ex = simplecycles_limited_length(G, K)\n",
+    "for c in C_K\n",
+    "    print(\"\\n*** Cycle : \\n\\t $(c[1])\")\n",
+    "    for i in 2:length(c) \n",
+    "        print(\" -> $(c[i])\")\n",
+    "    end\n",
+    "end"
    ]
   },
   {
@@ -379,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -466,17 +734,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of vertices: 16\n",
-      "Number of arcs: 74\n",
-      "List of arcs with weights:\n",
-      "(1,5):1.0, (1,6):1.0, (1,8):1.0, (2,1):1.0, (2,3):1.0, (2,11):1.0, (2,12):1.0, (3,5):1.0, (3,6):1.0, (3,8):1.0, (4,1):1.0, (4,3):1.0, (4,11):1.0, (4,12):1.0, (6,1):1.0, (6,3):1.0, (6,11):1.0, (6,12):1.0, (7,1):1.0, (7,3):1.0, (7,11):1.0, (7,12):1.0, (8,1):1.0, (8,3):1.0, (8,11):1.0, (8,12):1.0, (9,1):1.0, (9,3):1.0, (9,11):1.0, (9,12):1.0, (10,1):1.0, (10,2):1.0, (10,3):1.0, (10,4):1.0, (10,5):1.0, (10,6):1.0, (10,7):1.0, (10,8):1.0, (10,9):1.0, (10,11):1.0, (10,12):1.0, (10,13):1.0, (10,14):1.0, (10,15):1.0, (10,16):1.0, (12,1):1.0, (12,3):1.0, (12,11):1.0, (13,1):1.0, (13,2):1.0, (13,3):1.0, (13,4):1.0, (13,5):1.0, (13,6):1.0, (13,7):1.0, (13,8):1.0, (13,9):1.0, (13,10):1.0, (13,11):1.0, (13,12):1.0, (13,14):1.0, (13,15):1.0, (13,16):1.0, (14,1):1.0, (14,3):1.0, (14,11):1.0, (14,12):1.0, (15,1):1.0, (15,3):1.0, (15,11):1.0, (15,12):1.0, (16,5):1.0, (16,6):1.0, (16,8):1.0, "
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `read_dat_file` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `read_dat_file` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X23sZmlsZQ==.jl:1"
      ]
     }
    ],
