--- a/2025_Projet_KEP.ipynb
+++ b/2025_Projet_KEP.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,13 +134,13 @@
      "text": [
       "\n",
       "-------------------------------\n",
-      "Résolution du modèle avec cycle de taille au plus 4\n",
+      "Résolution du modèle avec cycle de taille au plus 3\n",
       "\n",
       "Statut de la résolution : OPTIMAL\n",
-      "Durée de la résolution : 0.012228167\n",
-      "Nombre de transferts réalisés : 4\n",
+      "Durée de la résolution : 2.210616417\n",
+      "Nombre de transferts réalisés : 47\n",
       "Liste des transferts réalisés :\n",
-      "1 -> 6 ; 3 -> 8 ; 6 -> 1 ; 8 -> 3 ; \n",
+      "2 -> 23 ; 4 -> 17 ; 5 -> 60 ; 6 -> 40 ; 8 -> 41 ; 10 -> 36 ; 11 -> 62 ; 12 -> 57 ; 13 -> 48 ; 14 -> 15 ; 15 -> 27 ; 17 -> 4 ; 18 -> 43 ; 19 -> 33 ; 20 -> 38 ; 22 -> 45 ; 23 -> 2 ; 24 -> 13 ; 25 -> 28 ; 27 -> 14 ; 28 -> 25 ; 30 -> 56 ; 32 -> 35 ; 33 -> 46 ; 35 -> 32 ; 36 -> 63 ; 37 -> 49 ; 38 -> 51 ; 40 -> 61 ; 41 -> 8 ; 42 -> 64 ; 43 -> 52 ; 45 -> 22 ; 46 -> 19 ; 48 -> 24 ; 49 -> 37 ; 51 -> 20 ; 52 -> 18 ; 54 -> 55 ; 55 -> 54 ; 56 -> 30 ; 57 -> 12 ; 60 -> 5 ; 61 -> 6 ; 62 -> 11 ; 63 -> 10 ; 64 -> 42 ; \n",
       "-------------------------------\n",
       "\n"
      ]
@@ -153,8 +153,9 @@
     "# tests de bon fonctionnement sur le petit graphe importé plus haut\n",
     "# solve_cycle_infini(G, edge_weight);\n",
     "# solve_cycle_2(G, edge_weight);\n",
-    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_001.wmd\");\n",
-    "solve_cycle_K(G, edge_weight, 4);"
+    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_071.wmd\");\n",
+    "K = 3\n",
+    "solve_cycle_K(G, edge_weight, K);"
    ]
   },
   {
@@ -172,33 +173,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 \t2 \t3 \t\n",
-      "-------------------------------\n",
-      "Brute force resolution of the KEP problem with K = 4 \n",
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: `SimpleDiGraph` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.\nin expression starting at /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/brute_force_approach.jl:1",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: `SimpleDiGraph` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "in expression starting at /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/brute_force_approach.jl:1\n",
       "\n",
-      "Resolution status : OPTIMAL\n",
-      "computation time : 0.009294667\n",
-      "Number of performed exchanges  : 4.0\n",
-      "List of performed exchanges :\n",
-      "\n",
-      "*** Cycle chosen: \n",
-      "\t 1 -> 6 -> 3 -> 8\n",
-      "-------------------------------\n",
-      "\n"
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/brute_force_approach.jl:1"
      ]
     }
    ],
    "source": [
     "include(\"brute_force_approach.jl\")\n",
-    "K = 4\n",
-    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_001.wmd\");\n",
+    "K = 5\n",
+    "G, edge_weight = read_wmd_file(\"data_KEP/KEP_031.wmd\");\n",
     "C_K = enumerate_cycles(G,K)\n",
     "\n",
     "brut_force(G,K)"
