--- a/Test_nb.ipynb
+++ b/Test_nb.ipynb
@@ -158,56 +158,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_normalized_coefficient(constrain[v],new_alpha, 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------------\n",
-      "outneigbours graph built in 0.002775875 seconds\n",
-      "\t -> invalids subproblems (G_o_prime without any path): [16, 34, 39, 44, 47, 51, 52, 55, 56, 57, 58, 62, 63, 64]\n",
-      "-------------------\n",
-      "\t iter 4265 / 10000lem n°1"
-     ]
-    },
-    {
-     "ename": "MathOptInterface.ResultIndexBoundsError{MathOptInterface.ObjectiveValue}",
-     "evalue": "Result index of attribute MathOptInterface.ObjectiveValue(1) out of bounds. There are currently 0 solution(s) in the model.",
+     "ename": "LoadError",
+     "evalue": "LoadError: syntax: \"prec_z::Float64 = 0.00010000000000000000\" inside type definition is reserved around /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:7\nin expression starting at /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:7",
      "output_type": "error",
      "traceback": [
-      "Result index of attribute MathOptInterface.ObjectiveValue(1) out of bounds. There are currently 0 solution(s) in the model.\n",
+      "LoadError: syntax: \"prec_z::Float64 = 0.00010000000000000000\" inside type definition is reserved around /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:7\n",
+      "in expression starting at /Users/jeanpousset/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:7\n",
       "\n",
       "Stacktrace:\n",
-      "  [1] check_result_index_bounds\n",
-      "    @ ~/.julia/packages/MathOptInterface/zq9bo/src/attributes.jl:207 [inlined]\n",
-      "  [2] get\n",
-      "    @ ~/.julia/packages/HiGHS/ClemT/src/MOI_wrapper.jl:2348 [inlined]\n",
-      "  [3] get(b::MathOptInterface.Bridges.LazyBridgeOptimizer{HiGHS.Optimizer}, attr::MathOptInterface.ObjectiveValue)\n",
-      "    @ MathOptInterface.Bridges ~/.julia/packages/MathOptInterface/zq9bo/src/Bridges/bridge_optimizer.jl:1247\n",
-      "  [4] _get_model_attribute(model::MathOptInterface.Utilities.CachingOptimizer{MathOptInterface.Bridges.LazyBridgeOptimizer{HiGHS.Optimizer}, MathOptInterface.Utilities.UniversalFallback{MathOptInterface.Utilities.Model{Float64}}}, attr::MathOptInterface.ObjectiveValue)\n",
-      "    @ MathOptInterface.Utilities ~/.julia/packages/MathOptInterface/zq9bo/src/Utilities/cachingoptimizer.jl:851\n",
-      "  [5] get\n",
-      "    @ ~/.julia/packages/MathOptInterface/zq9bo/src/Utilities/cachingoptimizer.jl:914 [inlined]\n",
-      "  [6] _moi_get_result(model::MathOptInterface.Utilities.CachingOptimizer{MathOptInterface.Bridges.LazyBridgeOptimizer{HiGHS.Optimizer}, MathOptInterface.Utilities.UniversalFallback{MathOptInterface.Utilities.Model{Float64}}}, args::MathOptInterface.ObjectiveValue)\n",
-      "    @ JuMP ~/.julia/packages/JuMP/N7h14/src/optimizer_interface.jl:1199\n",
-      "  [7] get(model::Model, attr::MathOptInterface.ObjectiveValue)\n",
-      "    @ JuMP ~/.julia/packages/JuMP/N7h14/src/optimizer_interface.jl:1219\n",
-      "  [8] objective_value(model::Model; result::Int64)\n",
-      "    @ JuMP ~/.julia/packages/JuMP/N7h14/src/objective.jl:122\n",
-      "  [9] objective_value\n",
-      "    @ ~/.julia/packages/JuMP/N7h14/src/objective.jl:118 [inlined]\n",
-      " [10] solve_SP_o_ILP(SP_o::Model, G_o_prime::SimpleDiGraph{Int64}, verb::Int64)\n",
-      "    @ Main ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/pricing.jl:72\n",
-      " [11] solve_SP_o_ILP(SP_o::Model, G_o_prime::SimpleDiGraph{Int64})\n",
-      "    @ Main ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/pricing.jl:69\n",
-      " [12] princing_ILP(SP::Vector{Model}, Gs_prime::Vector{SimpleDiGraph}, Φ::Vector{Vector{Int64}}, Gsp_validities::Vector{Bool}, Π_dual::Vector{Float64})\n",
-      "    @ Main ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/pricing.jl:129\n",
-      " [13] (::var\"#35#38\"{Vector{Model}, Vector{Bool}})(Π_dual::Vector{Float64})\n",
-      "    @ Main ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:70\n",
-      " [14] column_generation_ILP(G::SimpleDiGraph{Int64}, K::Int64; init_choice::String, SP_method::String, max_iter::Int64)\n",
-      "    @ Main ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:90\n",
-      " [15] top-level scope\n",
-      "    @ ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W3sZmlsZQ==.jl:10"
+      " [1] top-level scope\n",
+      "   @ ~/Documents/7-Optimisation Stochastique/Projet - Transfert d'organe/column_generation.jl:7"
      ]
     }
    ],
@@ -221,7 +192,7 @@
     "K = 4\n",
     "# Gsp_validities, Gs_prime, Φ = build_Gs_prime(G,K) # test of G_o_prime builds \n",
     "max_iter = 1000\n",
-    "transferts = column_generation_ILP(G, K; init_choice=\"path in G_op\", max_iter=max_iter)\n",
+    "transferts = column_generation_ILP(G, K; init_choice=\"all in K=2\", max_iter=max_iter)\n",
     "\n",
     "println(\"=============[END]=============\")\n"
    ]
